<resources>

    <string name="app_name">SpaceMerchant</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_travel_string">Travel</string>
    <string name="menu_help_string">Help</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_player_config">PlayerConfig</string>
    <string name="playgame">Play Game!</string>
    <string name="about">About</string>
    <string name="title_activity_select_game">SelectGame</string>
    <string name="select_game">Select a Game to Play!</string>
    <string name="title_activity_about_page">AboutPage</string>
    <string name="about_page_text1">Metagalactic Merchants</string>
    <string name="about_page_text3">Goal of this game is to MAKE MONEY!\n\nStats:\nPilot: More of this stat increases how far you can travel, and how much of your universe you can see!\nFighter: Increasing this stat decreases your chance of being raided by Pirates!\nTrader: This stat increases your ability to haggle...\nEngineer: This stat increases your cargo space.\n\nDifficulty Changes the Size of Your Universe, The Prices on Items, and Your Starting Cash.</string>
    <string name="about_page_text2">Presented to you by CS2340 Group 29\n\nMembers\n\nHarrison Katz\nKevin Shu\nRobert Mowlavi\nConnor Bryant\nKemble Hildreth</string>
    <string name="about_page_button">Back to Title</string>
    <string name="title_activity_choose_difficulty">Choose A Difficulty</string>
    <string name="difficulty">New Game</string>
    <string name="DifficultySetting">Beginner</string>
    <string name="difficultyDescription">Icon for the difficulties</string>
    <string name="difficultyText">Choose Difficulty</string>
    <string name="new_game">New Game</string>
    <string name="player_name_text">Player Name:</string>
    <string name="stat_pilot">Pilot:</string>
    <string name="stat_fighter">Fighter:</string>
    <string name="stat_trader">Trader:</string>
    <string name="stat_engineer">Engineer:</string>
    <string name="done">Done</string>
    <string name="title_activity_ship_config">ShipConfig</string>
    <string name="ship_sonfig">Design Your Ship!</string>
    <string name="title_activity_game">GameActivity</string>

    <!-- Planet Names -->
    <string name="planet_1">Acamar</string>
    <string name="planet_2">Adahn</string>
    <string name="planet_3">Aldea</string>
    <string name="planet_4">Andevian</string>
    <string name="planet_5">Antedi</string>
    <string name="planet_6">Balosnee</string>
    <string name="planet_7">Baratas</string>
    <string name="planet_8">Brax</string>
    <string name="planet_9">Bretel</string>
    <string name="planet_10">Calondia</string>
    <string name="planet_11">Campor</string>
    <string name="planet_12">Capelle</string>
    <string name="planet_13">Carzon</string>
    <string name="planet_14">Castor</string>
    <string name="planet_15">Cestus</string>
    <string name="planet_16">Cheron</string>
    <string name="planet_17">Courteney</string>
    <string name="planet_18">Daled</string>
    <string name="planet_19">Damast</string>
    <string name="planet_20">Davlos</string>
    <string name="planet_21">Deneb</string>
    <string name="planet_22">Deneva</string>
    <string name="planet_23">Devidia</string>
    <string name="planet_24">Draylon</string>
    <string name="planet_25">Drema</string>
    <string name="planet_26">Endor</string>
    <string name="planet_27">Esmee</string>
    <string name="planet_28">Exo</string>
    <string name="planet_29">Ferris</string>
    <string name="planet_30">Festen</string>
    <string name="planet_31">Fourmi</string>
    <string name="planet_32">Frolix</string>
    <string name="planet_33">Gemulon</string>
    <string name="planet_34">Guinifer</string>
    <string name="planet_35">Hades</string>
    <string name="planet_36">Hamlet</string>
    <string name="planet_37">Helena</string>
    <string name="planet_38">Hulst</string>
    <string name="planet_39">Iodine</string>
    <string name="planet_40">Iralius</string>
    <string name="planet_41">Janus</string>
    <string name="planet_42">Japori</string>
    <string name="planet_43">Jarada</string>
    <string name="planet_44">Jason</string>
    <string name="planet_45">Kaylon</string>
    <string name="planet_46">Khefka</string>
    <string name="planet_47">Kira</string>
    <string name="planet_48">Klaatu</string>
    <string name="planet_49">Klaestron</string>
    <string name="planet_50">Korma</string>
    <string name="planet_51">Kravat</string>
    <string name="planet_52">Krios</string>
    <string name="planet_53">Laertes</string>
    <string name="planet_54">Largo</string>
    <string name="planet_55">Lave</string>
    <string name="planet_56">Ligon</string>
    <string name="planet_57">Lowry</string>
    <string name="planet_58">Magrat</string>
    <string name="planet_59">Malcoria</string>
    <string name="planet_60">Melina</string>
    <string name="planet_61">Mentar</string>
    <string name="planet_62">Merik</string>
    <string name="planet_63">Mintaka</string>
    <string name="planet_64">Montor</string>
    <string name="planet_65">Mordan</string>
    <string name="planet_66">Myrthe</string>
    <string name="planet_67">Nelvana</string>
    <string name="planet_68">Nix</string>
    <string name="planet_69">Nyle</string>
    <string name="planet_70">Odet</string>
    <string name="planet_71">Og</string>
    <string name="planet_72">Omega</string>
    <string name="planet_73">Omphalos</string>
    <string name="planet_74">Orias</string>
    <string name="planet_75">Othello</string>
    <string name="planet_76">Parade</string>
    <string name="planet_77">Penthara</string>
    <string name="planet_78">Picard</string>
    <string name="planet_79">Pollux</string>
    <string name="planet_80">Quator</string>
    <string name="planet_81">Rakhar</string>
    <string name="planet_82">Ran</string>
    <string name="planet_83">Regulas</string>
    <string name="planet_84">Relva</string>
    <string name="planet_85">Rhymus</string>
    <string name="planet_86">Rochani</string>
    <string name="planet_87">Rubicum</string>
    <string name="planet_88">Rutia</string>
    <string name="planet_89">Sarpeidon</string>
    <string name="planet_90">Sefalla</string>
    <string name="planet_91">Seltrice</string>
    <string name="planet_92">Sigma</string>
    <string name="planet_93">Sol</string>
    <string name="planet_94">Somari</string>
    <string name="planet_95">Stakoron</string>
    <string name="planet_96">Styris</string>
    <string name="planet_97">Talani</string>
    <string name="planet_98">Tamus</string>
    <string name="planet_99">Tantalos</string>
    <string name="planet_100">Tanuga</string>
    <string name="planet_101">Tarchannen</string>
    <string name="planet_102">Terosa</string>
    <string name="planet_103">Thera</string>
    <string name="planet_104">Titan</string>
    <string name="planet_105">Torin</string>
    <string name="planet_106">Triacus</string>
    <string name="planet_107">Turkana</string>
    <string name="planet_108">Tyrus</string>
    <string name="planet_109">Umberlee</string>
    <string name="planet_110">Utopia</string>
    <string name="planet_111">Vadera</string>
    <string name="planet_112">Vagra</string>
    <string name="planet_113">Vandor</string>
    <string name="planet_114">Ventax</string>
    <string name="planet_115">Xenon</string>
    <string name="planet_116">Xerxes</string>
    <string name="planet_117">Yew</string>
    <string name="planet_118">Yojimbo</string>
    <string name="planet_119">Zalkon</string>
    <string name="planet_120">Zuul</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_trade">TradeActivity</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!-- items names -->
    <string name="Rocks">Rocks</string>
    <string name="Stone_Tools">Stone Tools</string>
    <string name="Bronze_Tools">Bronze Tools</string>
    <string name="Iron_Tools">Iron Tools</string>
    <string name="Steel_Tools">Steel Tools</string>
    <string name="Carbon_Tools">Carbon Tools</string>
    <string name="Machines">Machines</string>
    <string name="Robots">Robots</string>
    <string name="Wood">Wood</string>
    <string name="Dirt">Dirt</string>
    <string name="Coal">Coal</string>
    <string name="Bronze">Bronze</string>
    <string name="Iron">Iron</string>
    <string name="Brass">Brass</string>
    <string name="Diamond">Diamond</string>
    <string name="Graphene">Graphene</string>
    <string name="Dirty_Water">Dirty Water</string>
    <string name="Clean_Water">Clean Water</string>
    <string name="Grape_Juice">Grape Juice</string>
    <string name="Wine">Wine</string>
    <string name="Sangria">Sangria</string>
    <string name="Rum">Rum</string>
    <string name="Whiskey">Whiskey</string>
    <string name="Pure_Alcohol">Pure Alcohol</string>
    <string name="Deer">Deer</string>
    <string name="Cows">Cows</string>
    <string name="Horses">Horses</string>
    <string name="Rhinos">Rhinos</string>
    <string name="Fish">Fish</string>
    <string name="Sharks">Sharks</string>
    <string name="Land_Sharks">Land Sharks</string>
    <string name="Bacteria">Bacteria</string>
    <string name="Pretty_Stone">Pretty Stone</string>
    <string name="Sand_Castle">Sand Castle</string>
    <string name="Cave_Painting">Cave Painting</string>
    <string name="Oil_Painting">Oil Painting</string>
    <string name="Crude_Photo">Crude Photo</string>
    <string name="Fancy_Photo">Fancy Photo</string>
    <string name="Sculpture">Sculpture</string>
    <string name="Engraved_Mountain">Engraved Mountain</string>
    <string name="Sticks">Sticks</string>
    <string name="Boomerang">Boomerang</string>
    <string name="Bow_and_Arrow">Bow and Arrow</string>
    <string name="Spear">Spear</string>
    <string name="Sword">Sword</string>
    <string name="Musket">Musket</string>
    <string name="Tank">Tank</string>
    <string name="Warship">Warship</string>
    <string name="title_activity_travel">TravelActivity</string>
    <string name="title_activity_inventory">InventoryActivity</string>

</resources>