<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
 >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/playerNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_name_text" />

        <EditText
            android:id="@+id/playerName"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" />
    </LinearLayout>

    <Spinner
        android:id="@+id/chooseDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Gallery
        android:id="@+id/galleryHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Gallery
        android:id="@+id/galleryBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Gallery
        android:id="@+id/galleryLegs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Gallery
        android:id="@+id/galleryFeet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/stat1Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stat_pilot" />

        <SeekBar
            android:id="@+id/stat1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:max="16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/stat2Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stat_fighter" />

        <SeekBar
            android:id="@+id/stat2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:max="16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/stat3Text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stat_trader" />

        <SeekBar
            android:id="@+id/stat3"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:max="16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/stat4Text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stat_engineer" />

        <SeekBar
            android:id="@+id/stat4"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:max="16" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="doneButtonClicked"
            android:text="@string/done" />

    </RelativeLayout>

</LinearLayout>